revert to network policy
