# together-sandbox-python/together_sandbox/api/models/__init__.py
@@ -17,7 +17,7 @@ from .network_policy import NetworkPolicy
 from .sandbox import Sandbox
 from .sandbox_agent import SandboxAgent
 from .sandbox_experimental import SandboxExperimental
-from .sandbox_network import SandboxNetwork
+from .sandbox_network_policy import SandboxNetworkPolicy
 from .sandbox_page import SandboxPage
 from .sandbox_status import SandboxStatus
 from .sandbox_status_reason import SandboxStatusReason
@@ -47,7 +47,7 @@ __all__ = (
     "Sandbox",
     "SandboxAgent",
     "SandboxExperimental",
-    "SandboxNetwork",
+    "SandboxNetworkPolicy",
     "SandboxPage",
     "SandboxStatus",
     "SandboxStatusReason",
